bon/tests/integration/ui/compile_fail/attr_with.rs
use bon::Builder;

#[derive(Builder)]
struct ConflictingInto {
    #[builder(into, with = |x: u32| x + 1)]
    value: u32,
}

fn main() {}
