bon/tests/integration/ui/compile_fail/attr_with.stderr
error: `with` attribute can't be specified together with `into`
 --> tests/integration/ui/compile_fail/attr_with.rs:5:21
  |
5 |     #[builder(into, with = |x: u32| x + 1)]
  |                     ^^^^
